Dark mode fix in axis demo slider group

--- a/_includes/beatrice/00-global/_02-colors.scss
+++ b/_includes/beatrice/00-global/_02-colors.scss
@@ -61,7 +61,7 @@ $color-text-link-hover: $color-gray-800;
 $color-text-link-focus: $color-gray-800;
 $color-text-link-active: $color-gray-800;
 $color-text-link-active-trail: $color-gray-900;
-$color-slider-group-background: #F4EFF6;
+$color-slider-group-background: $color-gray-100;
 
 $header-background-gray-light: $color-gray-200;
 $header-background-gray-lighter: $color-gray-100;
